fix sale cart summ

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,5 +2,7 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
 index.file=
-run.as=LOCAL
+remote.connection=windy-21c270
+remote.upload=MANUALLY
+run.as=REMOTE
 url=http://localhost/quickadmin/
